--- a/src/OhSubtitle/MainWindow.xaml
+++ b/src/OhSubtitle/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Width="860" Height="80"
         Title="OhSubtitle"
+        Topmost="True"
+        WindowStartupLocation="CenterScreen"
         WindowStyle="None" Background="Black"
         AllowsTransparency="True" ResizeMode="CanResizeWithGrip"
-        WindowStartupLocation="CenterScreen"
         MouseDown="Window_MouseDown">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -17,7 +18,7 @@
         </Grid.ColumnDefinitions>
         <TextBox x:Name="txtInput" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,10,5,2" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Auto"
                  TextAlignment="Center" VerticalContentAlignment="Center" MaxLength="2000" TextWrapping="Wrap" Text="Google translation"
-                 Background="Black" Foreground="FloralWhite" FontSize="11"
+                 Background="Black" Foreground="FloralWhite" FontSize="14"
                  TextChanged="txtInput_TextChanged"/>
         <fa:ImageAwesome x:Name="imgLoading" Icon="Refresh" Spin="True" Height="14" Width="14" Grid.Column="1" Foreground="FloralWhite" Visibility="Hidden"/>
         <fa:ImageAwesome x:Name="imgReset" Icon="TrashOutline" Height="14" Width="14" Grid.Column="1" Foreground="FloralWhite" Visibility="Hidden"
@@ -25,7 +26,7 @@
         <ScrollViewer Grid.Column="2" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="5,10,5,2">
             <TextBlock x:Name="txtResult" HorizontalAlignment="Stretch"
                    TextAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"
-                   Foreground="FloralWhite" FontSize="11"/>
+                   Foreground="FloralWhite" FontSize="14"/>
         </ScrollViewer>
         <fa:ImageAwesome x:Name="imgClose" Icon="WindowClose" Margin="0,2,2,0" Height="14" Width="14" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="3" Foreground="FloralWhite"
                          MouseDown="imgClose_MouseDown" Cursor="Hand"/>
