--- a/src/OhSubtitle/MainWindow.xaml
+++ b/src/OhSubtitle/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="OhSubtitle.MainWindow"
+﻿<Window x:Class="OhSubtitle.MainWindow" Name="window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,7 @@
         Topmost="True" WindowStartupLocation="CenterScreen"
         WindowStyle="None" Background="Black"
         AllowsTransparency="True" ResizeMode="CanResizeWithGrip"
-        MouseDown="Window_MouseDown">
+        MouseDown="Window_MouseDown" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -17,18 +17,18 @@
         <TextBox x:Name="txtInput" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,10,5,2" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Auto"
                  TextAlignment="Center" VerticalContentAlignment="Center" MaxLength="2000" TextWrapping="Wrap" Text="Google translation"
                  Background="Black" Foreground="FloralWhite" FontSize="14"
-                 TextChanged="txtInput_TextChanged"/>
+                 TextChanged="TxtInput_TextChanged"/>
         <fa:ImageAwesome x:Name="imgLoading" Icon="Refresh" Spin="True" Height="14" Width="14" Grid.Column="1" Foreground="FloralWhite" Visibility="Hidden"/>
         <fa:ImageAwesome x:Name="imgReset" Icon="TrashOutline" Height="14" Width="14" Grid.Column="1" Foreground="FloralWhite" Visibility="Hidden"
-                         MouseDown="imgReset_MouseDown" Cursor="Hand"/>
+                         MouseDown="ImgReset_MouseDown" Cursor="Hand"/>
         <ScrollViewer Grid.Column="2" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="5,10,5,2">
             <TextBlock x:Name="txtResult" HorizontalAlignment="Stretch"
                    TextAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"
                    Foreground="FloralWhite" FontSize="14"/>
         </ScrollViewer>
         <fa:ImageAwesome x:Name="imgClose" Icon="WindowClose" Margin="0,2,2,0" Height="14" Width="14" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="3" Foreground="FloralWhite"
-                         MouseDown="imgClose_MouseDown" Cursor="Hand"/>
+                         MouseDown="ImgClose_MouseDown" Cursor="Hand"/>
         <fa:ImageAwesome x:Name="imgEye" Icon="Eye" Margin="0,0,2,0" Height="14" Width="14" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Foreground="FloralWhite"
-                         MouseEnter="imgEye_MouseEnter" MouseLeave="imgEye_MouseLeave"  Cursor="Hand"/>
+                         MouseEnter="ImgEye_MouseEnter" MouseLeave="ImgEye_MouseLeave"  Cursor="Hand"/>
     </Grid>
 </Window>
