--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="OhSubtitle.MainWindow" Name="window"
+﻿<Window x:Class="OhSubtitle.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,8 +7,7 @@
         WindowStyle="None" Background="Black"
         AllowsTransparency="True" ResizeMode="CanResizeWithGrip"
         MouseDown="Window_MouseDown"
-        Loaded="Window_Loaded"
-        Closing="Window_Closing">
+        Deactivated="Window_Deactivated">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
