--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -32,6 +32,6 @@
         <Grid x:Name="gridEye" Grid.Column="3" Background="Transparent" Height="20" Cursor="Hand"
               MouseEnter="GridEye_MouseEnter" MouseLeave="GridEye_MouseLeave" >
             <fa:ImageAwesome x:Name="imgEye" Icon="Eye" Margin="0,0,2,0" Width="14" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Foreground="FloralWhite"/>
-        </Grid
+        </Grid>
     </Grid>
 </Window>
