--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -2,12 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Width="860" Height="65" Title="OhSubtitle"
-        Topmost="True" WindowStartupLocation="CenterScreen"
-        WindowStyle="None" Background="Black"
+        Title="OhSubtitle"
+        Topmost="True" WindowStyle="None" Background="Black"
         AllowsTransparency="True" ResizeMode="CanResizeWithGrip"
-        MouseDown="Window_MouseDown"
-        Loaded="Window_Loaded"
+        MouseDown="Window_MouseDown" Loaded="Window_Loaded"
         Closing="Window_Closing"
         ShowInTaskbar="False">
     <Grid>
@@ -38,13 +36,13 @@
     </Grid>
     <Window.ContextMenu>
         <ContextMenu Name="menu">
-            <MenuItem Name="menuModelZhEn" Header="中文 / English" IsCheckable="True" Click="MenuModelZhEn_Click" IsChecked="True"></MenuItem>
-            <MenuItem Name="menuModelZhJp" Header="中文 / 日本語" IsCheckable="True" Click="MenuModelZhJp_Click"></MenuItem>
+            <MenuItem Name="menuLangModelZhEn" Header="中文 / English" IsCheckable="True" Click="MenuLangModelZhEn_Click" IsChecked="True"></MenuItem>
+            <MenuItem Name="menuLangModelZhJp" Header="中文 / 日本語" IsCheckable="True" Click="MenuLangModelZhJp_Click"></MenuItem>
             <Separator />
-            <MenuItem Name="menuColorWhite" Header="亮白 White" IsCheckable="True" Click="MenuColorWhite_Click"></MenuItem>
-            <MenuItem Name="menuColorLightGray" Header="亮灰 LightGray" IsCheckable="True" Click="MenuColorLightGray_Click"></MenuItem>
-            <MenuItem Name="menuColorDimGray" Header="暗灰 DimGray" IsCheckable="True" Click="MenuColorDimGray_Click"></MenuItem>
-            <MenuItem Name="menuColorBlack" Header="暗黑 Black" IsCheckable="True" Click="MenuColorBlack_Click" IsChecked="True"></MenuItem>
+            <MenuItem Name="menuThemeColorWhite" Header="亮白 White" IsCheckable="True" Click="MenuThemeColorWhite_Click"></MenuItem>
+            <MenuItem Name="menuThemeColorLightGray" Header="亮灰 LightGray" IsCheckable="True" Click="MenuThemeColorLightGray_Click"></MenuItem>
+            <MenuItem Name="menuThemeColorDimGray" Header="暗灰 DimGray" IsCheckable="True" Click="MenuThemeColorDimGray_Click"></MenuItem>
+            <MenuItem Name="menuThemeColorBlack" Header="暗黑 Black" IsCheckable="True" Click="MenuThemeColorBlack_Click" IsChecked="True"></MenuItem>
             <Separator />
             <MenuItem Name="menuExit" Header="退出 Exit" Click="MenuExit_Click"></MenuItem>
         </ContextMenu>
