--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OhSubtitle"
+        Title="OhSubtitle" Width="860" Height="65"
         Topmost="True" WindowStyle="None" Background="Black"
         AllowsTransparency="True" ResizeMode="CanResizeWithGrip"
         MouseDown="Window_MouseDown" Loaded="Window_Loaded"
@@ -19,9 +19,11 @@
                  TextAlignment="Center" VerticalContentAlignment="Center" MaxLength="2000" TextWrapping="Wrap" Text="在左侧输入要翻译的中文或英文，按 Ctrl+Q 切换不透明度"
                  Background="Black" Foreground="FloralWhite" FontSize="14"
                  TextChanged="TxtInput_TextChanged"/>
+        <fa:ImageAwesome x:Name="imgWriteNote" Icon="BookmarkOutline" Width="13" Height="13" Grid.Column="1" Margin="0,30,0,2" Foreground="FloralWhite" Visibility="Hidden"
+                         MouseDown="ImgWriteNote_MouseDown" Cursor="Hand" ToolTip="记笔记 WriteNote"/>
+        <fa:ImageAwesome x:Name="imgReset" Icon="TrashOutline" Height="14" Width="14" Grid.Column="1" Margin="0,2,0,20" Foreground="FloralWhite" Visibility="Hidden"
+                         MouseDown="ImgReset_MouseDown" Cursor="Hand" ToolTip="清空输入框 ClearInput"/>
         <fa:ImageAwesome x:Name="imgLoading" Icon="Refresh" Spin="True" Height="14" Width="14" Grid.Column="1" Foreground="FloralWhite" Visibility="Hidden"/>
-        <fa:ImageAwesome x:Name="imgReset" Icon="TrashOutline" Height="14" Width="14" Grid.Column="1" Foreground="FloralWhite" Visibility="Hidden"
-                         MouseDown="ImgReset_MouseDown" Cursor="Hand"/>
         <ScrollViewer Grid.Column="2" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="5,10,5,2">
             <TextBlock x:Name="txtResult" HorizontalAlignment="Stretch"
                        TextAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap"
