--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -40,8 +40,8 @@
     </Grid>
     <Window.ContextMenu>
         <ContextMenu Name="menu">
-            <MenuItem Name="menuLangModelZhEn" Header="中文 / English" IsCheckable="True" Click="MenuLangModelZhEn_Click" IsChecked="True"></MenuItem>
-            <MenuItem Name="menuLangModelZhJp" Header="中文 / 日本語" IsCheckable="True" Click="MenuLangModelZhJp_Click"></MenuItem>
+            <MenuItem Name="menuLangModelZhEn" Header="EnglishMode" IsCheckable="True" Click="MenuLangModelZhEn_Click" IsChecked="True"></MenuItem>
+            <MenuItem Name="menuLangModelZhJp" Header="日本語モデル" IsCheckable="True" Click="MenuLangModelZhJp_Click"></MenuItem>
             <Separator />
             <MenuItem Name="menuThemeColorWhite" Header="亮白 White" IsCheckable="True" Click="MenuThemeColorWhite_Click"></MenuItem>
             <MenuItem Name="menuThemeColorLightGray" Header="亮灰 LightGray" IsCheckable="True" Click="MenuThemeColorLightGray_Click"></MenuItem>
