--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -5,49 +5,83 @@
         Title="OhSubtitle" Width="860" Height="65"
         Topmost="True" WindowStyle="None" Background="Black"
         AllowsTransparency="True" ResizeMode="CanResizeWithGrip"
-        MouseDown="Window_MouseDown" Loaded="Window_Loaded"
-        Closing="Window_Closing"
-        ShowInTaskbar="False">
-    <Grid>
+        ShowInTaskbar="False"
+        MouseEnter="Window_MouseEnter"
+        MouseLeave="Window_MouseLeave"
+        MouseDown="Window_MouseDown"
+        Loaded="Window_Loaded"
+        Closing="Window_Closing">
+    <!-- Body Start -->
+    <Grid x:Name="gridMain">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="14"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="18"/>
+            <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="txtInput" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,10,5,2" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                 TextAlignment="Center" VerticalContentAlignment="Center" MaxLength="2000" TextWrapping="Wrap" Text="在左侧输入要翻译的句子，按 Ctrl+Q 切换不透明度，右击边缘打开菜单"
+        <!-- Grid Column 1 -->
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="4"/>
+            </Grid.RowDefinitions>
+            <TextBox x:Name="txtInput" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0,0" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Auto"
+                 TextAlignment="Center" VerticalContentAlignment="Center" MaxLength="2000" TextWrapping="Wrap"
                  Background="Black" Foreground="FloralWhite" FontSize="14"
                  TextChanged="TxtInput_TextChanged"/>
-        <fa:ImageAwesome x:Name="imgWriteNote" Icon="BookmarkOutline" Width="13" Height="13" Grid.Column="1" Margin="0,30,0,2" Foreground="FloralWhite" Visibility="Hidden"
-                         MouseDown="ImgWriteNote_MouseDown" Cursor="Hand" ToolTip="记笔记 WriteNote"/>
-        <fa:ImageAwesome x:Name="imgNoteWrote" Icon="Bookmark" Width="13" Height="13" Grid.Column="1" Margin="0,30,0,2" Foreground="FloralWhite" Visibility="Hidden"
-                         ToolTip="笔记已添加到文件：我的笔记MyNote.csv"/>
-        <fa:ImageAwesome x:Name="imgReset" Icon="TrashOutline" Height="14" Width="14" Grid.Column="1" Margin="0,2,0,20" Foreground="FloralWhite" Visibility="Hidden"
-                         MouseDown="ImgReset_MouseDown" Cursor="Hand" ToolTip="清空输入框 ClearInput"/>
-        <fa:ImageAwesome x:Name="imgLoading" Icon="Refresh" Spin="True" Height="14" Width="14" Grid.Column="1" Foreground="FloralWhite" Visibility="Hidden"/>
-        <ScrollViewer Grid.Column="2" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="5,10,5,2">
-            <TextBox x:Name="txtResult" HorizontalAlignment="Stretch" TextAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap" FontSize="14"
-                     Background="Black" Foreground="FloralWhite" BorderThickness="0" IsReadOnly="True" IsTabStop="False"/>
-        </ScrollViewer>
-        <fa:ImageAwesome x:Name="imgClose" Icon="WindowClose" Margin="0,2,2,0" Width="14" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="3" Foreground="FloralWhite"
+            <Grid Grid.Row="1" HorizontalAlignment="Center" Background="Transparent">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="70"/>
+                    <ColumnDefinition Width="70"/>
+                </Grid.ColumnDefinitions>
+                <Grid x:Name="gridReset" Background="Transparent" Cursor="Hand" HorizontalAlignment="Center"
+                      MouseDown="ImgReset_MouseDown" ToolTip="清空输入框">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <fa:ImageAwesome x:Name="imgReset" Icon="TrashOutline" Height="14" Width="14" Foreground="FloralWhite"/>
+                    <Label x:Name="labReset" Grid.Column="1" Foreground="FloralWhite" FontSize="13" Padding="0" Margin="0,1,0,0" Content="清空"></Label>
+                </Grid>
+                <Grid x:Name="gridWriteNote" Grid.Column="1" Background="Transparent" Cursor="Hand" HorizontalAlignment="Center"
+                      MouseDown="ImgWriteNote_MouseDown" ToolTip="将输入框内容保存到笔记本">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <fa:ImageAwesome x:Name="imgWriteNote" Icon="BookmarkOutline" Width="13" Height="13" Foreground="FloralWhite"/>
+                    <Label x:Name="labWriteNote" Grid.Column="1" Foreground="FloralWhite" FontSize="13" Padding="0" Margin="0,1,0,0" Content="记笔记"></Label>
+                </Grid>
+                <Grid x:Name="gridNoteWrote" Grid.Column="1" Background="Transparent" HorizontalAlignment="Center"
+                      ToolTip="笔记已添加到文件：我的笔记.csv">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <fa:ImageAwesome Icon="Bookmark" Width="13" Height="13" Foreground="LawnGreen"/>
+                    <Label Grid.Column="1" Foreground="LawnGreen" FontSize="13" Padding="0" Margin="0,1,0,0" Content="已添加"></Label>
+                </Grid>
+            </Grid>
+        </Grid>
+        <!-- Grid Column 2 -->
+        <fa:ImageAwesome x:Name="imgClose" Grid.Column="2" Icon="WindowClose" Margin="0,2,2,0" Width="14" VerticalAlignment="Top" HorizontalAlignment="Right" Foreground="FloralWhite"
                          MouseDown="ImgClose_MouseDown" Cursor="Hand"/>
-        <Grid x:Name="gridEye" Grid.Column="3" Background="Transparent" Height="20" Cursor="Hand"
+        <Grid x:Name="gridEye" Grid.Column="2" Background="Transparent" Height="20" Cursor="Hand"
               MouseEnter="GridEye_MouseEnter" MouseLeave="GridEye_MouseLeave" >
             <fa:ImageAwesome x:Name="imgEye" Icon="Eye" Margin="0,0,2,0" Width="14" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Foreground="FloralWhite"/>
         </Grid>
     </Grid>
+    <!-- Body End -->
+    <!-- Menu Start -->
     <Window.ContextMenu>
         <ContextMenu Name="menu">
-            <MenuItem Name="menuLangModelZhEn" Header="中英互译" IsCheckable="True" Click="MenuLangModelZhEn_Click" IsChecked="True"></MenuItem>
-            <MenuItem Name="menuLangModelZhJp" Header="中日互译（实验性功能）" IsCheckable="True" Click="MenuLangModelZhJp_Click"></MenuItem>
+            <MenuItem Name="menuThemeColorWhite" Header="亮白" IsCheckable="True" Click="MenuThemeColorWhite_Click"></MenuItem>
+            <MenuItem Name="menuThemeColorLightGray" Header="亮灰" IsCheckable="True" Click="MenuThemeColorLightGray_Click"></MenuItem>
+            <MenuItem Name="menuThemeColorDimGray" Header="暗灰" IsCheckable="True" Click="MenuThemeColorDimGray_Click"></MenuItem>
+            <MenuItem Name="menuThemeColorBlack" Header="暗黑" IsCheckable="True" Click="MenuThemeColorBlack_Click" IsChecked="True"></MenuItem>
             <Separator />
-            <MenuItem Name="menuThemeColorWhite" Header="亮白 White" IsCheckable="True" Click="MenuThemeColorWhite_Click"></MenuItem>
-            <MenuItem Name="menuThemeColorLightGray" Header="亮灰 LightGray" IsCheckable="True" Click="MenuThemeColorLightGray_Click"></MenuItem>
-            <MenuItem Name="menuThemeColorDimGray" Header="暗灰 DimGray" IsCheckable="True" Click="MenuThemeColorDimGray_Click"></MenuItem>
-            <MenuItem Name="menuThemeColorBlack" Header="暗黑 Black" IsCheckable="True" Click="MenuThemeColorBlack_Click" IsChecked="True"></MenuItem>
-            <Separator />
-            <MenuItem Name="menuExit" Header="退出 Exit" Click="MenuExit_Click"></MenuItem>
+            <MenuItem Name="menuExit" Header="退出" Click="MenuExit_Click"></MenuItem>
         </ContextMenu>
     </Window.ContextMenu>
+    <!-- Menu End -->
 </Window>
